A2L/a2mlpy3/AMLParser.py
# Generated from AML.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class AMLParser ( Parser ):

    grammarFileName = "AML.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'A2ML'", "';'", "'char'", "'int'", "'long'", 
                     "'uchar'", "'uint'", "'ulong'", "'double'", "'float'", 
                     "'block'", "'enum'", "'{'", "'}'", "','", "'='", "'struct'", 
                     "'['", "']'", "'taggedstruct'", "'('", "')*;'", "'taggedunion'", 
                     "'/begin'", "'/end'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Begin", "End", "CIdent", "WS", "STRING", "SIGN", 
                      "NUMBER", "BlockComment", "LineComment" ]

    RULE_a2ml = 0
    RULE_declaration = 1
    RULE_type_definition = 2
    RULE_type_name = 3
    RULE_predefined_type_name = 4
    RULE_block_definition = 5
    RULE_enum_type_name = 6
    RULE_enumerator_list = 7
    RULE_enumerator = 8
    RULE_struct_type_name = 9
    RULE_struct_member_list = 10
    RULE_struct_member = 11
    RULE_member = 12
    RULE_array_specifier = 13
    RULE_taggedstruct_type_name = 14
    RULE_taggedstruct_member_list = 15
    RULE_taggedstruct_member = 16
    RULE_taggedstruct_definition = 17
    RULE_taggedunion_type_name = 18
    RULE_taggedunion_member_list = 19
    RULE_tagged_union_member = 20
    RULE_identifier = 21
    RULE_tag = 22
    RULE_keyword = 23
    RULE_constant = 24

    ruleNames =  [ "a2ml", "declaration", "type_definition", "type_name", 
                   "predefined_type_name", "block_definition", "enum_type_name", 
                   "enumerator_list", "enumerator", "struct_type_name", 
                   "struct_member_list", "struct_member", "member", "array_specifier", 
                   "taggedstruct_type_name", "taggedstruct_member_list", 
                   "taggedstruct_member", "taggedstruct_definition", "taggedunion_type_name", 
                   "taggedunion_member_list", "tagged_union_member", "identifier", 
                   "tag", "keyword", "constant" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    Begin=24
    End=25
    CIdent=26
    WS=27
    STRING=28
    SIGN=29
    NUMBER=30
    BlockComment=31
    LineComment=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class A2mlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Begin(self):
            return self.getToken(AMLParser.Begin, 0)

        def End(self):
            return self.getToken(AMLParser.End, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AMLParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(AMLParser.DeclarationContext,i)


        def getRuleIndex(self):
            return AMLParser.RULE_a2ml

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterA2ml" ):
                listener.enterA2ml(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitA2ml" ):
                listener.exitA2ml(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitA2ml" ):
                return visitor.visitA2ml(self)
            else:
                return visitor.visitChildren(self)




    def a2ml(self):

        localctx = AMLParser.A2mlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_a2ml)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(AMLParser.Begin)
            self.state = 51
            self.match(AMLParser.T__0)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AMLParser.T__2) | (1 << AMLParser.T__3) | (1 << AMLParser.T__4) | (1 << AMLParser.T__5) | (1 << AMLParser.T__6) | (1 << AMLParser.T__7) | (1 << AMLParser.T__8) | (1 << AMLParser.T__9) | (1 << AMLParser.T__10) | (1 << AMLParser.T__11) | (1 << AMLParser.T__16) | (1 << AMLParser.T__19) | (1 << AMLParser.T__22))) != 0):
                self.state = 52
                self.declaration()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(AMLParser.End)
            self.state = 59
            self.match(AMLParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_definition(self):
            return self.getTypedRuleContext(AMLParser.Type_definitionContext,0)


        def block_definition(self):
            return self.getTypedRuleContext(AMLParser.Block_definitionContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = AMLParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AMLParser.T__2, AMLParser.T__3, AMLParser.T__4, AMLParser.T__5, AMLParser.T__6, AMLParser.T__7, AMLParser.T__8, AMLParser.T__9, AMLParser.T__11, AMLParser.T__16, AMLParser.T__19, AMLParser.T__22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.type_definition()
                self.state = 62
                self.match(AMLParser.T__1)
                pass
            elif token in [AMLParser.T__10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.block_definition()
                self.state = 65
                self.match(AMLParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_name(self):
            return self.getTypedRuleContext(AMLParser.Type_nameContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_type_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_definition" ):
                listener.enterType_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_definition" ):
                listener.exitType_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_definition" ):
                return visitor.visitType_definition(self)
            else:
                return visitor.visitChildren(self)




    def type_definition(self):

        localctx = AMLParser.Type_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.type_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predefined_type_name(self):
            return self.getTypedRuleContext(AMLParser.Predefined_type_nameContext,0)


        def struct_type_name(self):
            return self.getTypedRuleContext(AMLParser.Struct_type_nameContext,0)


        def taggedstruct_type_name(self):
            return self.getTypedRuleContext(AMLParser.Taggedstruct_type_nameContext,0)


        def taggedunion_type_name(self):
            return self.getTypedRuleContext(AMLParser.Taggedunion_type_nameContext,0)


        def enum_type_name(self):
            return self.getTypedRuleContext(AMLParser.Enum_type_nameContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_type_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_name" ):
                listener.enterType_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_name" ):
                listener.exitType_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_name" ):
                return visitor.visitType_name(self)
            else:
                return visitor.visitChildren(self)




    def type_name(self):

        localctx = AMLParser.Type_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_name)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AMLParser.T__2, AMLParser.T__3, AMLParser.T__4, AMLParser.T__5, AMLParser.T__6, AMLParser.T__7, AMLParser.T__8, AMLParser.T__9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.predefined_type_name()
                pass
            elif token in [AMLParser.T__16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.struct_type_name()
                pass
            elif token in [AMLParser.T__19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.taggedstruct_type_name()
                pass
            elif token in [AMLParser.T__22]:
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.taggedunion_type_name()
                pass
            elif token in [AMLParser.T__11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 75
                self.enum_type_name()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predefined_type_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AMLParser.RULE_predefined_type_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredefined_type_name" ):
                listener.enterPredefined_type_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredefined_type_name" ):
                listener.exitPredefined_type_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredefined_type_name" ):
                return visitor.visitPredefined_type_name(self)
            else:
                return visitor.visitChildren(self)




    def predefined_type_name(self):

        localctx = AMLParser.Predefined_type_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_predefined_type_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AMLParser.T__2) | (1 << AMLParser.T__3) | (1 << AMLParser.T__4) | (1 << AMLParser.T__5) | (1 << AMLParser.T__6) | (1 << AMLParser.T__7) | (1 << AMLParser.T__8) | (1 << AMLParser.T__9))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tag(self):
            return self.getTypedRuleContext(AMLParser.TagContext,0)


        def type_name(self):
            return self.getTypedRuleContext(AMLParser.Type_nameContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_block_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_definition" ):
                listener.enterBlock_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_definition" ):
                listener.exitBlock_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_definition" ):
                return visitor.visitBlock_definition(self)
            else:
                return visitor.visitChildren(self)




    def block_definition(self):

        localctx = AMLParser.Block_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(AMLParser.T__10)
            self.state = 81
            self.tag()
            self.state = 82
            self.type_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_type_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def enumerator_list(self):
            return self.getTypedRuleContext(AMLParser.Enumerator_listContext,0)


        def identifier(self):
            return self.getTypedRuleContext(AMLParser.IdentifierContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_enum_type_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_type_name" ):
                listener.enterEnum_type_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_type_name" ):
                listener.exitEnum_type_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum_type_name" ):
                return visitor.visitEnum_type_name(self)
            else:
                return visitor.visitChildren(self)




    def enum_type_name(self):

        localctx = AMLParser.Enum_type_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_enum_type_name)
        self._la = 0 # Token type
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(AMLParser.T__11)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==AMLParser.CIdent:
                    self.state = 85
                    self.identifier()


                self.state = 88
                self.match(AMLParser.T__12)
                self.state = 89
                self.enumerator_list()
                self.state = 90
                self.match(AMLParser.T__13)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(AMLParser.T__11)
                self.state = 93
                self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enumerator_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def enumerator(self):
            return self.getTypedRuleContext(AMLParser.EnumeratorContext,0)


        def enumerator_list(self):
            return self.getTypedRuleContext(AMLParser.Enumerator_listContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_enumerator_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumerator_list" ):
                listener.enterEnumerator_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumerator_list" ):
                listener.exitEnumerator_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumerator_list" ):
                return visitor.visitEnumerator_list(self)
            else:
                return visitor.visitChildren(self)




    def enumerator_list(self):

        localctx = AMLParser.Enumerator_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_enumerator_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.enumerator()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AMLParser.T__14:
                self.state = 97
                self.match(AMLParser.T__14)
                self.state = 98
                self.enumerator_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumeratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyword(self):
            return self.getTypedRuleContext(AMLParser.KeywordContext,0)


        def constant(self):
            return self.getTypedRuleContext(AMLParser.ConstantContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_enumerator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumerator" ):
                listener.enterEnumerator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumerator" ):
                listener.exitEnumerator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumerator" ):
                return visitor.visitEnumerator(self)
            else:
                return visitor.visitChildren(self)




    def enumerator(self):

        localctx = AMLParser.EnumeratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_enumerator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.keyword()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AMLParser.T__15:
                self.state = 102
                self.match(AMLParser.T__15)
                self.state = 103
                self.constant()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_type_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(AMLParser.IdentifierContext,0)


        def struct_member_list(self):
            return self.getTypedRuleContext(AMLParser.Struct_member_listContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_struct_type_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_type_name" ):
                listener.enterStruct_type_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_type_name" ):
                listener.exitStruct_type_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_type_name" ):
                return visitor.visitStruct_type_name(self)
            else:
                return visitor.visitChildren(self)




    def struct_type_name(self):

        localctx = AMLParser.Struct_type_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_struct_type_name)
        self._la = 0 # Token type
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(AMLParser.T__16)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==AMLParser.CIdent:
                    self.state = 107
                    self.identifier()


                self.state = 110
                self.match(AMLParser.T__12)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AMLParser.T__2) | (1 << AMLParser.T__3) | (1 << AMLParser.T__4) | (1 << AMLParser.T__5) | (1 << AMLParser.T__6) | (1 << AMLParser.T__7) | (1 << AMLParser.T__8) | (1 << AMLParser.T__9) | (1 << AMLParser.T__11) | (1 << AMLParser.T__16) | (1 << AMLParser.T__19) | (1 << AMLParser.T__22))) != 0):
                    self.state = 111
                    self.struct_member_list()


                self.state = 114
                self.match(AMLParser.T__13)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(AMLParser.T__16)
                self.state = 116
                self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_member_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_member(self):
            return self.getTypedRuleContext(AMLParser.Struct_memberContext,0)


        def struct_member_list(self):
            return self.getTypedRuleContext(AMLParser.Struct_member_listContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_struct_member_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_member_list" ):
                listener.enterStruct_member_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_member_list" ):
                listener.exitStruct_member_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_member_list" ):
                return visitor.visitStruct_member_list(self)
            else:
                return visitor.visitChildren(self)




    def struct_member_list(self):

        localctx = AMLParser.Struct_member_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_struct_member_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.struct_member()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AMLParser.T__2) | (1 << AMLParser.T__3) | (1 << AMLParser.T__4) | (1 << AMLParser.T__5) | (1 << AMLParser.T__6) | (1 << AMLParser.T__7) | (1 << AMLParser.T__8) | (1 << AMLParser.T__9) | (1 << AMLParser.T__11) | (1 << AMLParser.T__16) | (1 << AMLParser.T__19) | (1 << AMLParser.T__22))) != 0):
                self.state = 120
                self.struct_member_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_memberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(AMLParser.MemberContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_struct_member

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_member" ):
                listener.enterStruct_member(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_member" ):
                listener.exitStruct_member(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_member" ):
                return visitor.visitStruct_member(self)
            else:
                return visitor.visitChildren(self)




    def struct_member(self):

        localctx = AMLParser.Struct_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_struct_member)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.member()
            self.state = 124
            self.match(AMLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_name(self):
            return self.getTypedRuleContext(AMLParser.Type_nameContext,0)


        def array_specifier(self):
            return self.getTypedRuleContext(AMLParser.Array_specifierContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_member

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMember" ):
                listener.enterMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMember" ):
                listener.exitMember(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = AMLParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_member)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.type_name()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AMLParser.T__17:
                self.state = 127
                self.array_specifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_specifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant(self):
            return self.getTypedRuleContext(AMLParser.ConstantContext,0)


        def array_specifier(self):
            return self.getTypedRuleContext(AMLParser.Array_specifierContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_array_specifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_specifier" ):
                listener.enterArray_specifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_specifier" ):
                listener.exitArray_specifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_specifier" ):
                return visitor.visitArray_specifier(self)
            else:
                return visitor.visitChildren(self)




    def array_specifier(self):

        localctx = AMLParser.Array_specifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_array_specifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(AMLParser.T__17)
            self.state = 131
            self.constant()
            self.state = 132
            self.match(AMLParser.T__18)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AMLParser.T__17:
                self.state = 133
                self.array_specifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Taggedstruct_type_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(AMLParser.IdentifierContext,0)


        def taggedstruct_member_list(self):
            return self.getTypedRuleContext(AMLParser.Taggedstruct_member_listContext,0)


        def getRuleIndex(self):
            return AMLParser.RULE_taggedstruct_type_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTaggedstruct_type_name" ):
                listener.enterTaggedstruct_type_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTaggedstruct_type_name" ):
                listener.exitTaggedstruct_type_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTaggedstruct_type_name" ):
                return visitor.visitTaggedstruct_type_name(self)
            else:
                return visitor.visitChildren(self)




    def taggedstruct_type_name(self):
